--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -7,16 +7,22 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        shell: bash
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+          submodules: true
 
-      # Runs a single command using the runners shell
-      - name: install libraries
+      - name: Git Sumbodule Update
         run: |
-          git submodule init
-          git submodule update
+          git pull --recurse-submodules
+          git submodule update --remote --recursive
 
       # Runs a set of commands using the runners shell
       - name: run tests
